--- a/templates.html
+++ b/templates.html
@@ -3,7 +3,8 @@
  <head>
        <meta charset="utf-8">
          <title>BibOut: Creating Templates</title>
-         <link rel="stylesheet" href="css/bootstrap.min.css">
+         <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
+         <link rel="stylesheet" href="stylesheets/stylesheet.css">
  </head>
  <body>
          
