--- a/templates.html
+++ b/templates.html
@@ -139,10 +139,10 @@ Here are some examples to get you started.
 	    one template in other, and (b) all of the publications are grouped by year,
 	    with a special heading for each year.</li>
 	    
-	<li><a href="examples/navtbl.tgz">navtbl.tgz</a>. Outputs all publications as an HTML table,
+<!--	<li><a href="examples/navtbl.tgz">navtbl.tgz</a>. Outputs all publications as an HTML table,
 	   with HTML links to the pdf files. 
 	   I use a fancier version of this on my iPad, which lets me navigate
-	   through the locally-stored PDFs of all of the papers that I would like to read.</li>	
+	   through the locally-stored PDFs of all of the papers that I would like to read.</li>	-->
       </ul>
       </section>
     </div>
