--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
 
   <body>
 
+   <div class="navbar" id="page-top" role="navigation">
+      <div class="navbar-inner">
+        <div class="container">
+          <ul class="nav">
+	    <li><a href="/index.html">BibOut</a></li>        
+            <li><a href="/archive.html">Templates</a></li>
+	    <li><a href="/about.html">RDoc</a></li>
+	    <li><a href="/messages.html">GitHub</a></li>
+ 	</ul>
+      </div>
+     </div>
+    </div>
+	
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
