--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Bibout : Formats BibTeX files into pretty files (e.g., HTML) using arbitrary templates." />
 
+    <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="stylesheets/stylesheet.css">
     <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700' type='text/css' rel='stylesheet' media='all'>
     <title>Bibout</title>
