try to add navbar

--- a/index.html
+++ b/index.html
@@ -14,17 +14,13 @@
 
   <body>
 
-   <div class="navbar" id="page-top" role="navigation">
-      <div class="navbar-inner">
-        <div class="container">
-          <ul class="nav">
-	    <li><a href="/index.html">BibOut</a></li>        
+   <div class="navbar navbar-default" id="page-top" role="navigation">
+     <a class="navbar-brand" href="/index.html">BibOut</a>
+     <ul class="nav">
             <li><a href="/archive.html">Templates</a></li>
 	    <li><a href="/about.html">RDoc</a></li>
-	    <li><a href="/messages.html">GitHub</a></li>
- 	</ul>
-      </div>
-     </div>
+	    <li><a href="/messages.html">View on GitHub</a></li>
+     </ul>
     </div>
 	
     <!-- HEADER -->
