fix all navbars, i think

--- a/templates.html
+++ b/templates.html
@@ -3,10 +3,24 @@
  <head>
        <meta charset="utf-8">
          <title>BibOut: Creating Templates</title>
+         <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
          <link rel="stylesheet" href="stylesheets/stylesheet.css">
  </head>
  <body>
-         
+
+   <div class="navbar navbar-default" id="page-top" role="navigation">
+     <div class="navbar-inner">  
+      <div class="container">  
+	<a class="navbar-brand" href="./index.html">BibOut</a>
+	<ul class="nav navbar-nav">
+	  <li><a href="./index.html">Home</a></li>
+	  <li class="active"><a href="./templates.html">Templates</a></li>
+	  <li><a href="./rdoc/index.html">RDoc</a></li>
+	</ul>
+      </div>
+      </div>
+    </div>
+
  <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 
