--- a/index.html
+++ b/index.html
@@ -6,21 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Bibout : Formats BibTeX files into pretty files (e.g., HTML) using arbitrary templates." />
 
-    <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="stylesheets/stylesheet.css">
-    <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700' type='text/css' rel='stylesheet' media='all'>
+    <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
     <title>Bibout</title>
   </head>
 
   <body>
 
    <div class="navbar navbar-default" id="page-top" role="navigation">
-     <a class="navbar-brand" href="/index.html">BibOut</a>
-     <ul class="nav">
-            <li><a href="/archive.html">Templates</a></li>
-	    <li><a href="/about.html">RDoc</a></li>
-	    <li><a href="/messages.html">View on GitHub</a></li>
-     </ul>
+     <div class="navbar-inner">  
+      <div class="container">  
+	<a class="navbar-brand" href="./index.html">BibOut</a>
+	<ul class="nav navbar-nav">
+	  <li class="active"><a href="./index.html">Home</a></li>
+	  <li><a href="./templates.html">Templates</a></li>
+	  <li><a href="./rdoc/index.html">RDoc</a></li>
+	</ul>
+      </div>
+      </div>
     </div>
 	
     <!-- HEADER -->
