--- a/templates.html
+++ b/templates.html
@@ -120,7 +120,7 @@ and the <a href="http://rubydoc.info/gems/bibtex-ruby/BibTeX/Bibliography">docum
 
 <h3>Entry</h3>
 <p>
-Each entry that you retreive from a Bibliography object will be an object of type  <a href="rdoc/classes/BibTeX./Entry.html">BibTeX::Entry</a>. This is another class
+Each entry that you retreive from a Bibliography object will be an object of type  <a href="rdoc/classes/BibTeX/Entry.html">BibTeX::Entry</a>. This is another class
 from <tt>bibtex-ruby</tt>. This class will let you access the information
 of each field within a BibTeX entry.
 The methods of the Entry class that you will be most interested in are:
